# Dora-The-Destroyer

./: Dora-The-Destroyer.cabal  Makefile  README.md  crapsum.hs  dtd.hi  dtd.hs  sendjunk.1  sendjunk.hs  ten.hs
Programs/: CrapSum.hs  SendJunk.hs  Ten.hs
Resource/: Bullshit.hs  PGP.hs
src/: crapsum.1  dtd.hs  sendjunk.1  ten.1
src/Programs/: CrapSum.hs  SendJunk.hs  Ten.hs
src/Resource/: Bullshit.hs  Mail.hs  PGP.hs
