Cabal-version: 3.4

Name:          Dora-The-Destroyer
Version:       0.1.0.0
Synopsis:      Tools which facilitate annoying systems administrators
Description:   "Dora the Destroyer" is a suite of small tools which
               facilitate pissing off systems administrators.

License:       Unlicense

Author:        Varik Valefor
Maintainer:    varikvalefor@aol.com
Copyright:     (c) Varik Valefor 2021.

Category:      Bullshit

Stability:     unstable

Source-repository head
  type:     git
  location: https://github.com/varikvalefor/Dora-The-Destroyer

executable picomp
  main-is:          dtd.hs

  ghc-options: -threaded -O2 -rtsopts
  other-modules:
    Resource.Mail,
    Resource.PGP,
    Resource.Bullshit,
    Programs.SendJunk,
    Programs.CrapSum,
    Programs.Ten
  build-depends:
    base == 4.*,
    bytestring >= 0.10.12 && < 0.11,
    process >= 1.6.13 && < 1.7
  hs-source-dirs:   src
  default-language:
    Haskell2010
